* Fixed some bugs the unittests found (listing / didn't send a request to the
  helper, and opening a deleted file triggered a BUG assertion).

* Fixed some compiler warnings with GCC 3.3.

* Added unit tests.

* Use /sbin prefix for depmod and modprobe, in case it's not in PATH (Alastair
  Porter).

Changes since 0.1.20:

* Use new f_mapping field to work with Linux kernels >= 2.6.2 (reported by
  Artem Baguinski and Stephen J Craig).

* Correctly detect the version for RedHat kernels (reported by Alastair
  Porter).